[build-system]
requires = ["flit_core>=3.4"]
build-backend = "flit_core.buildapi"

[project]
name = "rate_limited"
version = "0.1.1"
authors = [
  { name="Tomasz Pietruszka", email="tomek.pietruszka@gmail.com" },
]
description = "Use slow, rate-limited APIs - like those of Large Language Models - as efficiently as possible"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/tpietruszka/rate_limited"
"Bug Tracker" = "https://github.com/tpietruszka/rate_limited/issues"

[project.optional-dependencies]
test = [
  "pytest",
  "pytest-xdist",
  "pytest-timeout",
  "aiohttp",
  "requests",
]
lint = [
  "black",
  "isort",
  "flake8",
  "flake8-isort",
  "mypy",
  "types-requests",
  "types-tqdm",
  "aiohttp",
]

[tool.black]
line-length = 100

[tool.isort]
profile = "black"
